Closed Bug 404912 Opened 17 years ago Closed 17 years ago

typo in submit.log by Crash reporter

Categories

(Toolkit :: Crash Reporting, defect)

x86
Windows XP
defect
Not set
trivial

Tracking

()

VERIFIED FIXED
mozilla1.9beta2

People

(Reporter: masa141421356, Assigned: philor)

Details

Attachments

(1 file)

User-Agent:       Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007112106 Firefox/3.0b2pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007112106 Firefox/3.0b2pre

Text logged in submit.log when submission failed contains typo.


Reproducible: Always

Steps to Reproduce:
1.Crash minefield.
2.Force to fail submitting crash report.
3.Check submit.log
Actual Results:  
My submit.log is

[11/21/07 14:19:04] Crash report submision failed: Unknown error, error code: 0x00002f19
[11/21/07 14:19:30] Crash report submision failed: Unknown error, error code: 0x00002f19
[11/21/07 14:25:40] Crash report submision failed: Unknown error, error code: 0x00002f19
[11/21/07 14:56:41] Crash report submision failed: Unknown error, error code: 0x00002f19
[11/21/07 14:58:37] Crash report submision failed: Unknown error, error code: 0x00002f19
[11/21/07 19:43:55] Crash report submision failed: Unknown error, error code: 0x00002f19


Expected Results:  
"submision" seems to be "submission".

For non-English-speaker , "submision" is unknown word.
Component: General → Breakpad Integration
Product: Firefox → Toolkit
QA Contact: general → breakpad.integration
Version: unspecified → Trunk
Attached patch FixSplinter Review
Assignee: nobody → philringnalda
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Attachment #289780 - Flags: review?(ted.mielczarek)
Comment on attachment 289780 [details] [diff] [review]
Fix

oops.
Attachment #289780 - Flags: review?(ted.mielczarek) → review+
Attachment #289780 - Flags: approval1.9?
Comment on attachment 289780 [details] [diff] [review]
Fix

a=beltzner on behalf of drivers
Attachment #289780 - Flags: approval1.9? → approval1.9+
toolkit/crashreporter/client/crashreporter_win.cpp 1.17
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M10
Verified at Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b2pre) Gecko/2007112605 Firefox/3.0b2pre

my submit.log
--------
[11/27/07 20:00:08] Crash report submission failed: The server name or address could not be resolved
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: