Bug 404912 - typo in crashreporter submit.log, r=luser, a=beltzner